force-app/main/default/objects/TVE_Project_Progress__mdt/TVE_Project_Progress__mdt.object-meta.xml
<CustomObject>
    <label>TVE Project Progress</label>
    <pluralLabel>TVE Project Progress</pluralLabel>
</CustomObject>