force-app/main/default/objects/TVE_Project_Progress__mdt/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <label>Date Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>