force-app/main/default/objects/TVE_Project_Progress__mdt/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label># Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>