force-app/main/default/objects/TVE_Project_Progress__mdt/fields/Display_Date__c.field-meta.xml
<CustomField>
    <fullName>Display_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Date?</label>
    <type>Checkbox</type>
</CustomField>