force-app/main/default/objects/TVE_Project_Progress__mdt/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <label>Offer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PREQ</fullName>
                <default>true</default>
                <label>PREQ</label>
            </value>
            <value>
                <fullName>DSNG</fullName>
            </value>
            <value>
                <fullName>COMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>