force-app/main/default/objects/TVE_Project_Progress__mdt/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYNOW</fullName>
                <default>true</default>
                <label>PAYNOW</label>
            </value>
            <value>
                <fullName>PAYLATER</fullName>
            </value>
            <value>
                <fullName>NOPAYMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>