force-app/main/default/objects/TVE_Project_Progress__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>OfferType__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>Display_Date__c</columns>
    <columns>DateField__c</columns>
    <columns>Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>